# a2ps

./: .gitignore  .gitmodules  .prev-version  ANNOUNCE  AUTHORS  HACKING  Makefile.am  NEWS  README  README-git  bootstrap  bootstrap.conf  cfg.mk  configure.ac
afm/: .gitignore  Makefile.am
build-aux/: .gitignore  Makefile.am
contrib/: .gitignore  Makefile.am  README  card.in  fixnt.l  fixps.in  lp2.in  pdiff.in  psmandup.in  psset.in  texi2dvi4a2ps
contrib/emacs/: a2ps-print.el  a2ps.el
contrib/sample/: Makefile.am  main.c
doc/: .a2psrc  .gitignore  Makefile.am  a2ps.texi  translators.pl  translators.texi  translators.txt
encoding/: Makefile.am  encoding.map  euc-jp.edf  ibm-cp437.edf  iso2.edf  koi8.edf
etc/: .gitignore  Makefile.am  a2ps-site.cfg.in  a2ps_cfg.in
fonts/: Makefile.am
gl/lib/: free.c.diff
liba2ps/: .gitignore  Makefile.am  README  a2ps.h  argv.c  caret.c  caret.h  common.c  common.h  confg.gperf  confg.h  darray.c  darray.h  document.c  document.h  dsc.c  dsc.h  dstring.c  dstring.h  encoding.c  encoding.h  faces.c  faces.h  filalign.c  filtdir.c  fjobs.c  fjobs.h  fonts.h  fonts.l  gc-stubs.c  gc-stubs.h  gc_calloc.c  gen.c  gen.h  getnum.c  getshline.c  getshline.h  hashtab.c  hashtab.h  jobs.c  (+52 more)
m4/: .gitignore  a2_psutils.m4  gnulib-cache.m4  gperf-check.m4
man/: .gitignore  Makefile.am  Makefile.maint  a2ps-lpr-wrapper.1  a2ps.x  card.x  common.x  fixnt.1  fixps.x  lp2.x  pdiff.x  psmandup.x  psset.x
ogonkify/: .gitignore  Makefile.am  README  configure.ac  helper.ps  phvbo-c.afm  phvro-c.afm
ogonkify/doc/: .gitignore  Makefile.am  ogonkify.texi
ogonkify/m4/: Makefile.am  perl.m4
po/: .gitignore  POTFILES.in  Rules-loc  ca.po  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ru.po  sl.po  sv.po  tr.po
po-gnulib/: .gitignore
ppd/: Makefile.am
ps/: Makefile.am  base.ps
sheets/: Makefile.am  c.ssh  claire.ssh  dc_shell.ssh  for90kwds.ssh  haskell.ssh  idl.ssh  lout.ssh  modula3.ssh  oberon.ssh  pretex.ssh  python.ssh  rd.ssh  rexx.ssh  s.ssh  sather.ssh  sheets.map  small.ssh  sml.ssh  specc.ssh  st.ssh  stratego.ssh  texscript.ssh  tiger.ssh  vrml.ssh
src/: .gitignore  Makefile.am  a2ps-lpr-wrapper  buffer.c  buffer.h  delegate.c  delegate.h  generate.c  generate.h  lexps.l  lexssh.l  main.c  parsessh.y  read.c  select.c  select.h  sheets-map.l  ssheet.c  ssheet.h  sshread.c  sshread.h  versions.c  versions.h
tests/: .gitignore  Makefile.am  a2ps-tst.cfg.in  backup.tst  contrib.tst  deleg-2.tst  guess-1.tst  options-1.tst  printers.tst  styles.tst
tests/gps-ref/: InsertBlock.ps
tests/ps-ref/: InsertBlock.ps  encoding.ps  prolog-1.ps  prolog-4.ps
